fix a couple critical find bugs warnings